--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -24,32 +24,34 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="page-title">
-    <h1><?php echo $this->__('Forgot Your Password?') ?></h1>
-</div>
-<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
-    <div class="fieldset">
-        <h2 class="legend"><?php echo $this->__('Retrieve your password here') ?></h2>
-        <p><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
-        <ul class="form-list">
-            <li>
-                <label for="email_address" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
-                <div class="input-box">
-                    <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
+<div class="page page_club">
+    <div class="account-create">
+        <div class="club_tit  club_login_tit">
+            <h2><?php echo $this->__('Forgot Your Password?') ?></h2>
+        </div>
+
+        <div class="club-rule-content">
+            <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+            <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
+                <div class="club_member_forget">
+                    <div class="fieldset">
+                        <h2 class="legend"><?php echo $this->__('Retrieve your password here') ?></h2>
+                        <p><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
+
+                        <div class="club_memberreg_fi cs-clear">
+                            <input type="text" name="email" id="email_address" placeholder="<?php echo $this->__('Email Address') ?>*" value="" title="<?php echo $this->__('Email Address') ?>" class="club_login_ipt required-entry" />
+                        </div>
+                    </div>
+                    <div class="buttons-set">
+                        <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub"><span><span><?php echo $this->__('Submit') ?></span></span></button>
+                    </div>
                 </div>
-            </li>
-            <?php echo $this->getChildHtml('form.additional.info'); ?>
-        </ul>
+            </form>
+            <script type="text/javascript">
+            //<![CDATA[
+                var dataForm = new VarienForm('form-validate', true);
+            //]]>
+            </script>
+        </div>
     </div>
-    <div class="buttons-set">
-        <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-        <p class="back-link"><a href="<?php echo $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?php echo $this->__('Back to Login') ?></a></p>
-        <button type="submit" title="<?php echo $this->__('Submit') ?>" class="button"><span><span><?php echo $this->__('Submit') ?></span></span></button>
-    </div>
-</form>
-<script type="text/javascript">
-//<![CDATA[
-    var dataForm = new VarienForm('form-validate', true);
-//]]>
-</script>
+</div>
