--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -32,156 +32,84 @@
  */
 ?>
 
-<div class="page page_club">
-    <div class="account-create">
+<div class="page page_club"club_member_formte">
         <div class="club_tit  club_login_tit">
-            <h2><?php echo $this->__('Lily Club member') ?></h2>
+            <h2><?php echo $this->__('MEMBER<br>REGISTRATION') ?></h2>
         </div>
-        <div class="sub-title">
-            <?php echo $this->__('Welcome to be a member of Lily club! Free 200 points upon registration, countable with off-line purchases. (Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
-        </div>
-        <div class="club-rule-wrapper">
+        <div class="club_member_rule">
+            <div class="club_login_txt">
+                <?php echo $this->__('Welcome to be a member of Lily club! Free 200 points upon registration, countable with off-line purchases. (Limited to Beijing,Shanghai,Wuhan,Shenzhen and Guangzhou.) ')?>
+            </div>
             <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('club-rule')->toHtml(); ?>
-
+            <button id="register-button" class="club_member_rulelink" title="<?php echo $this->__('Agree to the terms and sign up')?>" type="button"><span><span><?php echo $this->__('Agree to the terms and sign up.')?></span></span></button>
         </div>
-            <button id="register-button" class="button" title="<?php echo $this->__('Agree to the terms and sign up')?>" type="button"><span><span><?php echo $this->__('Agree to the terms and sign up.')?></span></span></button>
+
         <div class="club-rule-content hide">
         <?php echo $this->getChildHtml('form_fields_before')?>
         <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
         <?php /* Extensions placeholder */ ?>
         <?php echo $this->getChildHtml('customer.form.register.extra')?>
         <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="form-validate">
-            <div class="fieldset step-1">
-                <h2 class="legend"><?php echo $this->__('1. Cell Phone Verifying') ?></h2>
-                <ul class="form-list">
-                    <li>
-                        <label for="telephone" class="required"><em>*</em><?php echo $this->__('Cell Phone') ?></label>
-                        <div class="input-box">
-                            <input type="text" name="telephone" id="telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->__('Cell Phone') ?>" class="input-text required-entry" />
-
-
-                             <button type="button" title="<?php //echo $this->__('Get Code') ?><?php echo $this->__('Get a verifying code') ?>" class="button" id="get_code"><span><span><?php //echo $this->__('Get Code') ?><?php echo $this->__('Get a verifying code') ?></span></span></button>
-
-                        </div>
-                        <!--<span>直接用手机号码登录</span>-->
-                    </li>
-
-                    <li>
-                        <label for="verify_code" class="required"><em>*</em><?php echo $this->__('Verifying Code') ?></label>
-                        <div class="input-box">
-                            <input type="text" id="verify_code" name="verify_code"  title="<?php echo $this->__('Verifying Code') ?>" class="input-text required-entry" />
-
-
-                             <button type="button" title="<?php echo $this->__('Verify Code') ?>" class="button" id="verfir"><span><span><?php echo $this->__('Verify Code') ?></span></span></button>
-
-                        </div>
-
-                    </li>
-
-
-
-                </ul>
+            <div class="club_member_form cs-clear step-1">
+                <div class="cs-clear">
+                    <input class="club_login_ipt required-entry" name="telephone" id="telephone" value="<?php echo $this->escapeHtml($this->getFormData()->getTelephone()) ?>" title="<?php echo $this->__('Cell Phone') ?>"  placeholder="<?php echo $this->__('Cell Phone') ?>*" />
+                    <input class="club_login_ipt required-entry" id="verify_code" name="verify_code"  title="<?php echo $this->__('Verifying Code') ?>"  placeholder="<?php echo $this->__('Verifying Code') ?>* " />
+                </div>
+                <button type="button" title="<?php //echo $this->__('Get Code') ?><?php echo $this->__('Get a verifying code') ?>" class="club_member_sub" id="get_code"><span><span><?php //echo $this->__('Get Code') ?><?php echo $this->__('Get a verifying code') ?></span></span></button>
+                <button type="button" title="<?php echo $this->__('Verify Code') ?>" class="club_member_sub" id="verfir"><span><span><?php echo $this->__('Verify Code') ?></span></span></button>
             </div>
 
-            <div class="fieldset step-2 disable">
+            <div class="club_memberreg cs-clear fieldset step-2 disable">
                 <input type="hidden" name="success_url" value="<?php echo $this->getSuccessUrl() ?>" />
                 <input type="hidden" name="error_url" value="<?php echo $this->getErrorUrl() ?>" />
 
-                <h2 class="legend"><?php echo $this->__('2. Fill in Personal Information') ?></h2>
-                <ul class="form-list">
 
-                    <li>
-                        <label for="email_address" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
-                        <div class="input-box">
-                            <input type="text" name="email" id="email_address" value="<?php echo $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="text" name="email" id="email_address" placeholder="<?php echo $this->__('Email Address') ?>*" value="<?php echo $this->escapeHtml($this->getFormData()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="club_login_ipt validate-email required-entry" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('The email address is essential to contact with you, please fill in correctly.')?></span>
+                    </div>
 
-                        </div>
-                        <span><?php echo $this->__('The email address is essential to contact with you, please fill in correctly.')?></span>
-                    </li>
-                    <li class="fields">
-                        <div class="field">
-                            <label for="password" class="required"><em>*</em><?php echo $this->__('Password') ?></label>
-                            <div class="input-box">
-                                <input type="password" name="password" id="password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password" />
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="password" name="password" id="password" placeholder="<?php echo $this->__('Password') ?>*" title="<?php echo $this->__('Password') ?>" class="club_login_ipt required-entry validate-password" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('6 to 16 characters')?></span>
+                    </div>
 
-
-                            </div>
-                            <span><?php echo $this->__('6 to 16 characters')?></span>
-                        </div>
-                        <div class="field">
-                            <label for="confirmation" class="required"><em>*</em><?php echo $this->__('Confirm Password') ?></label>
-                            <div class="input-box">
-                                <input type="password" name="confirmation" title="<?php echo $this->__('Confirm Password') ?>" id="confirmation" class="input-text required-entry validate-cpassword" />
-
-                            </div>
-                            <span><?php echo $this->__('Please input again')?></span>
-                        </div>
-                    </li>
-                    <?php echo $this->getChildHtml('form.additional.info'); ?>
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="password" name="password" id="confirmation" placeholder="<?php echo $this->__('Confirm Password') ?>*" title="<?php echo $this->__('Confirm Password') ?>" class="club_login_ipt required-entry validate-cpassword" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('Please input again')?></span>
+                    </div>
 
 
-                    <li class="fields customer-name">
-                        <?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getFormData())->setForceUseCustomerAttributes(true)->toHtml() ?>
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="text" name="firstname" id="firstname" placeholder="<?php echo $this->__('Name') ?>*" value="" title="<?php echo $this->__('Name') ?>" class="club_login_ipt required-entry" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get benefits')?></span>
+                    </div>
 
-                    </li>
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="text" name="birth" id="birth" placeholder="<?php echo $this->__('Birthday') ?>*" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get a birthday benefit')?></span>
+                    </div>
 
-                <?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
-                <?php if ($_gender->isEnabled()): ?>
-                    <li class="fields customer-gender"><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?>
-                    <span><?php echo $this->__('Please input correctly to get benefits')?></span>
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="text" name="address" id="address" placeholder="<?php echo $this->__('Address') ?>*" value="" title="<?php echo $this->__('Address') ?>" class="club_login_ipt required-entry" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get benefits')?></span>
+                    </div>
 
-                    </li>
-                <?php endif ?>
+                    <div class="club_memberreg_fi cs-clear">
+                        <input type="text" name="customer_zip" id="customer_zip" placeholder="<?php echo $this->__('ZIP/Post Code') ?>*" value="" title="<?php echo $this->__('ZIP/Post Code') ?>" class="club_login_ipt required-entry" />
+                        <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get benefits')?></span>
+                    </div>
+
+                    <div class="club_memberreg_fi club_memberreg_edm cs-clear">
+                        <?php echo $this->__('Sign Up for Newsletter') ?> <input type="checkbox" name="is_subscribed" title="<?php echo $this->__('Sign Up for Newsletter') ?>" value="1" id="is_subscribed" class="checkbox" />
+                    </div>
 
 
-                                <?php $_dob = $this->getLayout()->createBlock('customer/widget_dob') ?>
-                <?php if ($_dob->isEnabled()): ?>
-                    <li>
-                        <label for="birth"><?php echo $this->__('Birth') ?></label>
-                        <div class="input-box">
-                            <input type="text" id="birth" value="" title="<?php echo $this->__('Birth') ?>" class="input-text Wdate" />
-                        </div>
-                        <span><?php echo $this->__('Please input correctly to get a birthday benefit')?></span>
-                    </li>
-                    <li style="display:none"><?php echo $_dob->setDate($this->getFormData()->getDob())->toHtml() ?></li>
-                <?php endif ?>
-                     <li>
-                        <label for="customer_address" class="required"><em>*</em><?php echo $this->__('Address') ?></label>
-                        <div class="input-box">
-                            <input type="text" name="customer_address" id="customer_address" value="<?php echo $this->escapeHtml($this->getFormData()->getCustomerAddress()) ?>" title="<?php echo $this->__('Address') ?>" class="input-text required-entry" />
-                        </div>
-                        <span><?php echo $this->__('Please input correctly to get benefits')?></span>
-                    </li>
-                     <li>
-                        <label for="customer_zip" class="required"><em>*</em><?php echo $this->__('ZIP/Post Code') ?></label>
-                        <div class="input-box">
-                            <input type="text" name="customer_zip" id="customer_zip" value="<?php echo $this->escapeHtml($this->getFormData()->getCustomerZip()) ?>" title="<?php echo $this->__('Zip') ?>" class="input-text required-entry" />
-                        </div>
-                    </li>
-                    <?php if ($this->isNewsletterEnabled()): ?>
-                    <li class="control">
-                        <div class="input-box">
-                            <input type="checkbox" name="is_subscribed" title="<?php echo $this->__('Sign Up for Newsletter') ?>" value="1" id="is_subscribed"<?php if($this->getFormData()->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" />
-                        </div>
-                        <label for="is_subscribed"><?php echo $this->__('Sign Up for Newsletter') ?></label>
-                        <?php /* Extensions placeholder */ ?>
-                        <?php echo $this->getChildHtml('customer.form.register.newsletter')?>
-                    </li>
-                    <?php endif ?>
-
-                <?php $_taxvat = $this->getLayout()->createBlock('customer/widget_taxvat') ?>
-                <?php if ($_taxvat->isEnabled()): ?>
-                    <li><?php echo $_taxvat->setTaxvat($this->getFormData()->getTaxvat())->toHtml() ?></li>
-                <?php endif ?>
-
-                </ul>
             </div>
 
 
             <div class="buttons-set">
-                <p class="required"><?php echo $this->__('* Required Fields') ?></p>
-                <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>" class="back-link"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-                <button type="submit" title="<?php echo $this->__('Submit') ?>" class="button"><span><span><?php echo $this->__('Submit') ?></span></span></button>
+                <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub"><span><span><?php echo $this->__('Submit') ?></span></span></button>
             </div>
         </form>
 
@@ -202,8 +130,9 @@
 
                 $('#register-button').click(function(){
                     $('.club-rule-content').removeClass('hide');
-                    $('.club-rule-wrapper').hide();
+                    $('.club_member_rule').hide();
                     $(this).hide();
+                    $('html,body').animate({scrollTop:0});
                 })
 
                 $(".fieldset input[type='text']").each(function(){
