--- a/app/design/frontend/default/default/template/page/html/footer.phtml
+++ b/app/design/frontend/default/default/template/page/html/footer.phtml
@@ -34,23 +34,23 @@
 			    <div class="ft_list">
 				    <h2 data-title="BRAND"><?php echo $this->__(  "BRAND")?></h2>
 				    <ol>
-					    <li><a data-title="HISTORY" href='./history'><?php echo $this->__(  "HISTORY")?></a></li>
-					    <li><a data-title="EVENTS" href='./events'><?php echo $this->__(  "EVENTS")?></a></li>
+					    <li><a data-title="HISTORY" href='http://www.lily-collection.com/history'><?php echo $this->__(  "HISTORY")?></a></li>
+					    <li><a data-title="EVENTS" href='http://www.lily-collection.com/events'><?php echo $this->__(  "EVENTS")?></a></li>
 				    </ol>
 			    </div>
 			    <div class="ft_list">
 				    <h2 data-title="PRODUCT"><?php echo $this->__(  "PRODUCT")?></h2>
 				    <ol>
-					    <li><a data-title="CAMPAIGN" href='./campaign'><?php echo $this->__(  "CAMPAIGN")?></a></li>
-					    <li><a data-title="LOOK-BOOK" href='./lookbook'><?php echo $this->__(  "LOOK BOOK")?></a></li>
-					    <li><a data-title="STREET-SNAP" href='./streetsnap'><?php echo $this->__(  "STREET SNAP")?></a></li>
+					    <li><a data-title="CAMPAIGN" href='http://www.lily-collection.com/campaign'><?php echo $this->__(  "CAMPAIGN")?></a></li>
+					    <li><a data-title="LOOK-BOOK" href='http://www.lily-collection.com/lookbook'><?php echo $this->__(  "LOOK BOOK")?></a></li>
+					    <li><a data-title="STREET-SNAP" href='http://www.lily-collection.com/streetsnap'><?php echo $this->__(  "STREET SNAP")?></a></li>
 				    </ol>
 			    </div>
 			    <div class="ft_list">
 				    <h2 data-title="STORE"><?php echo $this->__(  "STORE")?></h2>
 				    <ol>
-					    <li data-title="STAR-STORE"><a href='./starstore'><?php echo $this->__(  "STAR STORE")?></a></li>
-					    <li data-title="STORE-LOCATOR"><a href='./storelocator'><?php echo $this->__(  "STORE LOCATOR")?></a></li>
+					    <li data-title="STAR-STORE"><a href='http://www.lily-collection.com/starstore'><?php echo $this->__(  "STAR STORE")?></a></li>
+					    <li data-title="STORE-LOCATOR"><a href='http://www.lily-collection.com/storelocator'><?php echo $this->__(  "STORE LOCATOR")?></a></li>
 				    </ol>
 			    </div>
 			    <div class="ft_list" style="display:none;">
@@ -71,13 +71,13 @@
 				    </ol>
 			    </div>-->
           <div class="ft_list">
-            <h2><a href="./job"><?php echo $this->__(  "JOB")?></a></h2>
+            <h2><a href="http://www.lily-collection.com/job"><?php echo $this->__(  "JOB")?></a></h2>
           </div>
           <div class="ft_list">
-            <h2><a href="./contact"><?php echo $this->__(  "CONTACT")?></a></h2>
+            <h2><a href="http://www.lily-collection.com/contact"><?php echo $this->__(  "CONTACT")?></a></h2>
           </div>
           <div class="ft_list">
-            <h2><a href="./privacy"><?php echo $this->__(  "PRIVACY")?></a></h2>
+            <h2><a href="http://www.lily-collection.com/privacy"><?php echo $this->__(  "PRIVACY")?></a></h2>
           </div>
 			    <div class="ft_list">
 				    <div class="ft_share cs-clear">
@@ -109,11 +109,11 @@
         <!-- mobile menu -->
     <div class='mbmenu'>
         <ul>
-            <li class='item <?php echo active_class("home")?>'>
+            <li class='item'>
                 <h2><a data-title="Home" href='./index' title='index' index='1'><?php echo $this->__(  "Home")?></a></h2>
                 <ol></ol>
             </li>
-            <li class='item <?php echo active_class("brand")?>'>
+            <li class='item'>
                 <h2 data-title="BRAND"><?php echo $this->__(  "BRAND")?></h2>
                 <ol>
                     <li><a href='./index?hash=brand_story' data-title="BRAND STORY"><?php echo $this->__(  "BRAND STORY")?></a></li>
@@ -121,7 +121,7 @@
                     <li><a href='./events' data-title="EVENTS"><?php echo $this->__(  "EVENTS")?></a></li>
                 </ol>
             </li>
-            <li class='item <?php echo active_class("product")?>'>
+            <li class='item'>
                 <h2 data-title="PRODUCT"><?php echo $this->__(  "PRODUCT")?></h2>
                 <ol>
                     <li><a href='./campaign' data-title="CAMPAIGN"><?php echo $this->__(  "CAMPAIGN")?></a></li>
@@ -129,7 +129,7 @@
                     <li><a href='./streetsnap' data-title="STREET-SNAP"><?php echo $this->__(  "STREET SNAP")?></a></li>
                 </ol>
             </li>
-            <li class='item <?php echo active_class("store")?>'>
+            <li class='item'>
                 <h2 data-title="STORE"><?php echo $this->__(  "STORE")?></h2>
                 <ol>
                     <li><a href='./starstore' data-title="STAR-STORE"><?php echo $this->__(  "STAR STORE")?></a></li>
@@ -157,10 +157,6 @@
         </div>
     </div>
 
-    <!--  -->
-    <script type="text/javascript" src="js/lib/modernizr.min.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=AwxxvHue9bTdFietVWM4PLtk"></script>
-    <script data-main="js/config" src="js/lib/require.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
