--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -24,14 +24,18 @@
 .club_exchange_list{background: #000;display: inline-block;width: 10px;height: 10px;margin:0 10px}
 /**/
 .club_member_form{width: 530px;margin: 100px auto}
+.club_member_form .validation-advice {display: none;}
 .club_member_sub{width: 308px;height: 48px;border:#000 solid 1px;color:#fff;background: #000;display: inline;margin: 30px auto;display: block;}
-.club_memberreg{width: 308px;margin: 100px auto}
+.club_memberreg{width: 308px;margin: 100px auto 0 auto}
 .club_memberreg_fi{margin: 0 0 10px }
+.club_memberreg_edm {padding:0 0 0 35px;}
 .club_memberreg_fi .club_login_ipt{margin:0 auto;float: none;display: block;}
 .club_memberreg_fi{position: relative;}
 .club_memberreg_tips{position: absolute;left:310px;line-height: 48px;top:0;width:300px}
 .club_memberreg_seltxt{width: 200px;height: 46px;border:#000 solid 1px;padding:0 16px;margin: 0 auto;color:#000;font-family:arial;background: #f3dedd;line-height: 46px;background: url('../images/club_memberreg_sel.png') no-repeat 94% 50%;}
 .club_memberreg_sel{position: absolute;width: 232px;height: 46px;display: block;top: 1px;left:38px;opacity: 0;filter:alpha(opacity=0);cursor: pointer;}
+.club_member_forget{width: 308px;margin: 0 auto 0 auto}
+.club_member_forget .club_memberreg_fi {margin-top:20px;}
 /**/
 .club_member_rule{text-align: center;margin: 0 auto;width: 860px}
 .club_member_rule h4{text-transform:uppercase;margin: 80px 0 40px}
@@ -41,7 +45,7 @@
 .club_member_table td,
 .club_member_table th{padding: 18px}
 .club_member_table2{width:430px;display: block;margin: 0 auto;}
-.club_member_rulelink{display: block;width: 320px;height: 48px;background: #000;text-align: center;line-height: 48px;color:#fff;margin: 80px auto 20px}
+.club_member_rulelink{border:none;display: block;width: 320px;height: 48px;background: #000;text-align: center;line-height: 48px;color:#fff;margin: 80px auto 20px}
 /**/
 .club_QA_txt{width: 830px;margin: 0 auto;text-align: center;line-height: 36px;font-family:"Microsoft Yahei",arial,SimHei,sans-serif}
 .club_QA_txt p{margin: 0 0 50px;}
