--- a/app/design/frontend/default/default/template/page/html/header.phtml
+++ b/app/design/frontend/default/default/template/page/html/header.phtml
@@ -34,15 +34,6 @@
                 <img src="/images/hd_logo.png">
             </li>
             <li class='item'>
-                <h2 data-title="LILY-CLUB"><span class="club"><?php echo $this->__("VIP CLUB")?></span></h2>
-                <ol>
-                    <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("custom/account/login")?>' index='9'><?php echo $this->__("LILY CLUB")?></a></li>
-                    <li><a data-title="TERMS" href='<?php echo getClubSiteURL("club_memberrules.html")?>' index='10'><?php echo $this->__("TERMS")?></a></li>
-                    <li><a data-title="POINT CHECKING" href='<?php echo getClubSiteURL("club_pointinfo.html")?>' index='11'><?php echo $this->__("POINT CHECKING")?></a></li>
-                    <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("club_gifthis.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
-                </ol>
-            </li>
-            <li class='item'>
                 <h2 data-0="padding-top:41px;" data-100="padding-top:27px;"><a class="" data-title="Home" href='http://www.lily-collection.com/index' title='index' index='1'><?php echo $this->__("Home")?></a></h2>
             </li>
             <li class='item'>
@@ -58,6 +49,15 @@
                     <li><a data-title="CAMPAIGN" href='<?php echo getOfficeSiteURL("campaign")?>' title='campaign' index='4'><?php echo $this->__("CAMPAIGN")?></a></li>
                     <li><a data-title="LOOKBOOK" href='<?php echo getOfficeSiteURL("lookbook")?>' title="lookbook" index='5'><?php echo $this->__("LOOK BOOK")?></a></li>
                     <li><a data-title="STREET-SNAP" href='<?php echo getOfficeSiteURL("streetsnap")?>' title="streetsnap" index='6'><?php echo $this->__("STREET SNAP")?></a></li>
+                </ol>
+            </li>
+            <li class='item'>
+                <h2 data-title="LILY-CLUB"><?php echo $this->__("VIP CLUB")?></h2>
+                <ol>
+                    <li><a data-title="LILY-CLUB" href='<?php echo getClubSiteURL("custom/account/login")?>' index='9'><?php echo $this->__("LILY CLUB")?></a></li>
+                    <li><a data-title="TERMS" href='<?php echo getClubSiteURL("club_memberrules.html")?>' index='10'><?php echo $this->__("TERMS")?></a></li>
+                    <li><a data-title="POINT CHECKING" href='<?php echo getClubSiteURL("club_pointinfo.html")?>' index='11'><?php echo $this->__("POINT CHECKING")?></a></li>
+                    <li><a data-title="REDEMPTION" href='<?php echo getClubSiteURL("club_gifthis.html")?>' index='12'><?php echo $this->__("REDEMPTION")?></a></li>
                 </ol>
             </li>
             <li class='item'>
