--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -4,7 +4,9 @@
 
 /**/
 .club{background: #f3dedd;}
-.page_club{padding: 120px 0;background: #f3dedd;}
+.page_club{padding: 120px 0;background: #f3dedd;font-size:14px;}
+.page_club>div {opacity:0;}
+.page_club a:hover {text-decoration: underline;}
 .club_tit{font-size: 80px;line-height:88px;text-transform:uppercase;text-align: center;padding:0 0 50px;font-family:arial;}
 .club_login{}
 .club_login_tit{}
@@ -25,7 +27,8 @@
 /**/
 .club_member_form{width: 530px;margin: 100px auto}
 .club_member_form .validation-advice {display: none;}
-.club_member_sub{width: 308px;height: 48px;border:#000 solid 1px;color:#fff;background: #000;display: inline;margin: 30px auto;display: block;}
+.club_member_sub{cursor:pointer;width: 308px;height: 48px;border:#000 solid 1px;color:#fff;background: #000;display: inline;margin: 30px auto;display: block;}
+.club_member_sub:hover {opacity:0.8}
 .club_memberreg{width: 308px;margin: 100px auto 0 auto}
 .club_memberreg_fi{margin: 0 0 10px }
 .club_memberreg_edm {padding:0 0 0 35px;}
@@ -34,7 +37,7 @@
 .club_memberreg_tips{position: absolute;left:310px;line-height: 48px;top:0;width:300px}
 .club_memberreg_seltxt{width: 200px;height: 46px;border:#000 solid 1px;padding:0 16px;margin: 0 auto;color:#000;font-family:arial;background: #f3dedd;line-height: 46px;background: url('../images/club_memberreg_sel.png') no-repeat 94% 50%;}
 .club_memberreg_sel{position: absolute;width: 232px;height: 46px;display: block;top: 1px;left:38px;opacity: 0;filter:alpha(opacity=0);cursor: pointer;}
-.club_member_forget{width: 308px;margin: 0 auto 0 auto}
+.club_member_forget{width: 308px;margin: 0 auto 0 auto;text-align:center;}
 .club_member_forget .club_memberreg_fi {margin-top:20px;}
 /**/
 .club_member_rule{text-align: center;margin: 0 auto;width: 860px}
@@ -86,7 +89,7 @@
 .club_meminfolist2 li strong{float: left;width: 130px;}
 .club_meminpw{padding:20px 0 0 150px;}
 .club_meminpwform{margin: 30px 0;}
-.club_meminpwform input{width: 200px;padding: 0 15px;border:#000 solid 1px;line-height: 48px;height: 48px;float: left;display: inline;margin-right:30px; }
+.club_meminpwform input{background:none;width: 200px;padding: 0 15px;border:#000 solid 1px;line-height: 48px;height: 48px;float: left;display: inline;margin-right:30px; }
 .club_meminpwform .club_meminpwsub{width: 134px;height: 48px;background: #000;color:#fff;text-align: center;line-height: 48px;display: block;margin: 30px 0;cursor: pointer;font-size: 14px}
 /**/
 .club_navlist_gogift{width: 185px;height: 48px;background: #000;color:#fff;text-align: center;line-height: 48px;display: block;margin: 50px 0;position: absolute;left:150px;top:700px;}
