--- a/app/design/frontend/default/default/template/wishlist/view.phtml
+++ b/app/design/frontend/default/default/template/wishlist/view.phtml
@@ -35,7 +35,7 @@
         <div class="club_ecoupon_center cs-clear">
             <div class="club_ecoupon_nav">
                 <div class="club_welcome">
-                    <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?> ! <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
+                    <?php echo $this->__("Hi")?> <?php echo Mage::getSingleton('customer/session')->getCustomer()->getFirstname();?>,<br/> <?php echo $this->__("Welcome to Lily Club")?> <br /> <?php echo $this->__("Your remaining points")?> <br /><?php echo $this->__("are %s point(s)", Mage::getSingleton('customer/session')->getCustomer()->getUsePoints())  ?>
                 </div>
                 <a class="club_logout" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>customer/account/logout/"><?php echo $this->__("LOGOUT")?></a>
                 <div class="club_navlist">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="cs-clear">
                     <!-- <a href="#" class="club_giftcardcheckout">CHECK OUT</a> -->
-                    <a href="giftproducts.html" class="club_navlist_gogift"><?php echo $this->__("Go to Gift Exchange")?></a>
+                    <a href="<?php echo $this->getUrl("giftproducts.html")?>" class="club_navlist_gogift"><?php echo $this->__("Go to Gift Exchange")?></a>
                 </div>
             </div>
             <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
