--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -32,26 +32,22 @@
 
         <div class="club-rule-content">
             <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-            <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
+            <form action="<?php echo $this->getUrl('lilyadmin/index/forgotpassword') ?>" class="forgetpasswordform" method="post" id="form-validate">
                 <div class="club_member_forget">
                     <div class="fieldset">
                         <h2 class="legend"><?php echo $this->__('Retrieve your password here') ?></h2>
-                        <p><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
+                        <p><?php echo $this->__('Please enter your telephone below.') ?></p>
 
                         <div class="club_memberreg_fi cs-clear">
-                            <input type="text" name="email" id="email_address" placeholder="<?php echo $this->__('Email Address') ?>*" value="" title="<?php echo $this->__('Email Address') ?>" class="club_login_ipt required-entry" />
+                             <input type="text" name="telephone" placeholder="<?php echo $this->__("Telephone")?>" alt="telephone" id="telephone" class="input-text required-entry" value="" autocomplete="off">
                         </div>
+                        <span class="second">60</span>s
                     </div>
                     <div class="buttons-set">
                         <button type="submit" title="<?php echo $this->__('Submit') ?>" class="club_member_sub"><span><span><?php echo $this->__('Submit') ?></span></span></button>
                     </div>
                 </div>
             </form>
-            <script type="text/javascript">
-            //<![CDATA[
-                var dataForm = new VarienForm('form-validate', true);
-            //]]>
-            </script>
         </div>
     </div>
 </div>
