--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -53,18 +53,18 @@
             <div class="club_ecoupon_com club_meminfo">
                 <div class="club_meminfolist cs-clear" >
                     <ul class="club_meminfolist1">
-                        <li><span><?php echo $this->__("Name")?></span><strong><?php echo $this->getCustomer()->getFirstname(); ?></strong></li>
-                        <li><span><?php echo $this->__("E-mail")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getEmail()) ?></strong></li>
-                        <li><span><?php echo $this->__("Birthday")?></span><strong><?php echo date('Y/m/d', strtotime($this->getCustomer()->getDob())); ?></strong></li>
+                        <li><span><?php echo $this->__("Name")?></span><strong data-name="firstname"><?php echo $this->getCustomer()->getFirstname(); ?></strong></li>
+                        <li><span><?php echo $this->__("E-mail")?></span><strong data-name="email"><?php echo $this->htmlEscape($this->getCustomer()->getEmail()) ?></strong></li>
+                        <li><span><?php echo $this->__("Birthday")?></span><strong data-name="dob"><?php echo date('Y/m/d', strtotime($this->getCustomer()->getDob())); ?></strong></li>
 
                         <?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
-                        <li><span><?php echo $this->__("Gender")?></span><strong><?php echo $_gender->setGender($this->getCustomer()->getGender())->toHtml() ?></strong></li>
-                        <li><span><?php echo $this->__("Address")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getCustomerAddress()) ?></strong></li>
-                        <li><span><?php echo $this->__("Zip/Post code")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getCustomerZip()) ?></strong></li>
+                        <li><span><?php echo $this->__("Gender")?></span><strong data-name="gender"><?php echo $_gender->setGender($this->getCustomer()->getGender())->toHtml() ?></strong></li>
+                        <li><span><?php echo $this->__("Address")?></span><strong data-name="customerAddress"><?php echo $this->htmlEscape($this->getCustomer()->getCustomerAddress()) ?></strong></li>
+                        <li><span><?php echo $this->__("Zip/Post code")?></span><strong data-name="customerZip"><?php echo $this->htmlEscape($this->getCustomer()->getCustomerZip()) ?></strong></li>
                     </ul>
                     <ul class="club_meminfolist2">
-                        <li><span><?php echo $this->__("VIP Ctard")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipCard()) ?></strong></li>
-                        <li><span><?php echo $this->__("VIP level")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipLevel()) ?></strong></li>
+                        <li><span><?php echo $this->__("VIP Ctard")?></span><strong ><?php echo $this->htmlEscape($this->getCustomer()->getVipCard()) ?></strong></li>
+                        <li><span><?php echo $this->__("VIP level")?></span><strong ><?php echo $this->htmlEscape($this->getCustomer()->getVipLevel()) ?></strong></li>
                         <li><span><?php echo $this->__("Join date")?></span><strong><?php echo $this->htmlEscape(date('Y-m-d', strtotime($this->getCustomer()->getCardValidity()))) ?></strong></li>
                         <li><span><?php echo $this->__("Points")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getUsePoints()) ?></strong></li>
                         <li><span><?php echo $this->__("E coupon")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getEcoupon()) ?></strong></li>
@@ -115,7 +115,44 @@
 			jQuery('#month').val($dp.cal.getP('M'));
 			jQuery('#day').val($dp.cal.getP('d'));
 			jQuery('#dob').val($dp.cal.getP('y') + '-' + $dp.cal.getP('M') + '-' + $dp.cal.getP('d'));
-		}
+	}
+
+
+    // 双击文本，修改对应数据
+    (function ($) {
+        $(function () {
+            $(".club_meminfolist1 > li").dblclick(function () {
+                if ($("button[name='update-data-name']", $(this)).size()) {
+                    return;
+                }
+                var strongEl = $("strong[data-name!='']", $(this));
+                var strong = strongEl.html();
+                var input = "<input type='text' value='"+strong+"' name='"+$(strongEl).attr("data-name")+"' /> <button name='update-data-name' type='button' ><?php echo $this->__("Submit")?></button>";
+                $(strongEl).html(input);
+            });
+
+            $(".club_meminfolist1 button[name='update-data-name']").live("click", function () {
+                var self = $(this);
+                if ($(this).hasClass("clicked")) {
+                    return;
+                }
+                $(this).addClass("clicked");
+                var input = $(this).siblings("input[type='text']");
+
+                $.ajax({
+                    type: "POST",
+                    url: "<?php echo $this->getUrl("customer/account/editajaxPost")?>",
+                    data: {name: input.attr("name"), value: input.val()},
+                    success: function () {
+                        $(self).parent().html(input.val());
+                        $(self).removeClass("clicked");
+                    }
+                });
+            });
+        });
+    })(jQuery);
+
+
 	
 //]]>
 </script>
