--- a/app/design/frontend/default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/default/default/template/checkout/cart.phtml
@@ -31,8 +31,27 @@
  * @see Mage_Checkout_Block_Cart
  */
 ?>
-<div class="cart product-essential">
+<?php $customer = Mage::getSingleton("customer/session"); ?>
+<?php if (!$customer->isLoggedIn()) : ?>
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            var second = parseInt(jQuery(".time-counter .second").text());
+            setInterval(function () {
+                if (second < 0 ) {
+                    window.location.href="<?php echo $this->getUrl("customer/account/login")?>";
+                }
+                else {
+                    second -= 1;
+                    jQuery(".time-counter .second").html(second);
+                }
+            }, 1000);
+        });
+    </script>
+<?php endif; ?>
 
+
+<div class="cart product-essential">
+    <div class="time-counter"><?php echo $this->__("please login in club for checkout")?><span class="second">5</span>s</div>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     
 	<div class="form-before">
